# wasm-mock-vm

./: .gitignore  .gitpod.yml  .travis.yml  Cargo.toml  LICENSE_MIT  README.md  as-pect.config.js  imports.js  package.json  setup.sh  test.sh
.github/: nodejs.yml
.github/workflows/: nodejs.yml
assembly/: contract.ts  index.ts  outcome.ts
assembly/__tests__/: as-pect.d.ts  runtime.spec.ts
pkg/: wasm_mock_vm.d.ts  wasm_mock_vm.js  wasm_mock_vm_bg.d.ts  wasm_mock_vm_bg.js  wasm_mock_vm_bg.wasm
src/: lib.rs  mock_external.rs  utils.rs
src/mock/: context.rs  external.rs  memory.rs  mod.rs  runner.rs  vm_logic.rs
tests/: test.js
