[package]
name = "wasm-mock-vm"
version = "0.1.0"
authors = ["Willem Wyndham <willem@cs.umd.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
sha2 = "0.8"
byteorder = "1.2"
bs58 = "0.3"
wasm-bindgen = "0.2"
near-vm-logic = { version = "0.4.3" }
near-runtime-fees = { version = "0.4.3" }
near-vm-errors = {  version = "0.4.3" }
serde = { version = "1.0", features = ["derive"] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[workspace]
members = []


